--- a/ClientApp/src/app/formula-restriction/rawmaterial-restriction/rawmaterial-restriction.component.html
+++ b/ClientApp/src/app/formula-restriction/rawmaterial-restriction/rawmaterial-restriction.component.html
@@ -25,10 +25,10 @@
   </div>
   <div class="form-inline" style="padding-top:1%;">
     <label [hidden]="ifchina">Minimum Percentage</label>
-    <input [hidden]="ifchina" style="width: 15%;" type="text" class="form-control" [(ngModel)]="minpercent" name="minper" value="">
+    <input [hidden]="ifchina" style="width: 15%;" type="text" class="form-control" [(ngModel)]="minpercent" name="minper" value="" (blur)=" blurpercentage($event);">
 
     <label [hidden]="ifchinamax">Maximum Percentage</label>
-    <input [hidden]="ifchinamax" style="margin-left: 1%; width: 15%;" type="text" class="form-control" [(ngModel)]="maxpercentagedata" name="maxperc" value="">%
+    <input [hidden]="ifchinamax" style="margin-left: 1%; width: 15%;" type="text" class="form-control" [(ngModel)]="maxpercentagedata" name="maxperc" value="" (blur)=" blurmaxpercentage($event);">%
 
   </div>
   <div class="form-inline" style="padding-top:1%;">
@@ -75,7 +75,7 @@
   <div style="background-color: #f6f5f1;border:solid 0.1px darkgrey">
 
     <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-top:1%;margin-left:10px" matDialogClose>Close</button>
-    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-top:1%;margin-left:10px">New</button>
+    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-top:1%;margin-left:10px" (click)=" Cleardata()();">New</button>
 
     <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;margin-top:1%;margin-left:10px" (click)="Restriction_SaveUpdate();">Save / Update</button>
 
