--- a/ClientApp/src/app/pdr-management/pdr-management.component.html
+++ b/ClientApp/src/app/pdr-management/pdr-management.component.html
@@ -329,7 +329,7 @@
                           </div>
                           <div class="form-inline">
                             <label for="Texture">Texture</label>
-                            <input style="width:50%" type="text" class="form-control" id="Texture" [(ngModel)]="txture" name="txt" value="">
+                            <input style="width:50%" type="text" class="form-control" id="Texture" [(ngModel)]="texture" name="txt" value="">
                           </div>
                         </div>
                         <div class="form-group col-md-6">
