--- a/ClientApp/src/app/formula-lookup/addproduct-testing/addproduct-testing.component.html
+++ b/ClientApp/src/app/formula-lookup/addproduct-testing/addproduct-testing.component.html
@@ -15,17 +15,17 @@ add product testing html
           <div class="form-group col-md-6">
             <div class="form-inline">
               <label style="margin-left: 6.7%">PDR.no</label>
-              <input style="width: 50%; margin-left: 51px" type="text" class="form-control"
+              <input disabled style="width: 50%; margin-left: 51px" type="text" class="form-control"
                      [(ngModel)]="pdrno" #pno name="pno" value="">
             </div>
             <div class="form-inline">
               <label style="margin-left: 6.7% ">Formula code</label>
-              <input style="width: 50%;margin-left:13px" type="text" class="form-control"
+              <input disabled style="width: 50%;margin-left:13px" type="text" class="form-control"
                      [(ngModel)]="formulacode" #fc name="fcode" value="">
             </div>
             <div class="form-inline">
               <label style="margin-left:6.7%">Formula name</label>
-              <input style="width: 50%; margin-left:12px" type="text" class="form-control"
+              <input disabled style="width: 50%; margin-left:12px" type="text" class="form-control"
                      [(ngModel)]="formulaname" #fn name="fname" value="">
             </div>
             <div class="form-inline">
@@ -61,7 +61,7 @@ add product testing html
             </div>
             <div class="form-inline">
               <label style="margin-left:6%">Total Cost $</label>
-              <input style="width: 50%;margin-left:5.4%" type="text" class="form-control"
+              <input disabled style="width: 50%;margin-left:5.4%" type="text" class="form-control"
                      [(ngModel)]="TotalC" #fn name="totc" value="">
             </div>
           </div>
