--- a/ClientApp/src/app/raw-material/load-property/load-property.component.css
+++ b/ClientApp/src/app/raw-material/load-property/load-property.component.css
@@ -158,3 +158,7 @@ th {
   background-color: #150485 !important;
   color: white;
 }
+.table tr.active td {
+  background-color: #48da24 !important;
+  color: white;
+}   
