--- a/ClientApp/src/app/raw-material/load-property/load-property.component.html
+++ b/ClientApp/src/app/raw-material/load-property/load-property.component.html
@@ -31,7 +31,7 @@
     </thead>
     <tbody>
      
-      <tr *ngFor="let propertyloadingraw of datarawpropertyloadrprop  let i=index " (click)="setClickedRow(i);selecteduserdet(propertyloading);highlightRow(propertyloadingraw)" [class.active]="i == HighlightRow" >
+      <tr *ngFor="let propertyloadingraw of datarawpropertyloadrprop  let i=index " (click)="onRowClick(i);selecteduserdet(propertyloading);highlightRow(propertyloadingraw)" [class.table-active]="i == currentRowIndex" >
 
         <td style="width:5%">{{propertyloadingraw.propname}}</td>
 
