--- a/ClientApp/src/app/formula-restriction/rawmaterial-restriction-us/rawmaterial-restriction-us.component.html
+++ b/ClientApp/src/app/formula-restriction/rawmaterial-restriction-us/rawmaterial-restriction-us.component.html
@@ -49,7 +49,7 @@
     </div>
     <div class="form-inline" style="padding-top:1%;">
       <label>Maximum Percentage</label>
-      <input style="margin-left: 1%; width: 15%;" type="text" class="form-control" [(ngModel)]="maximumconclusion" value="" name="maxper">%
+      <input style="margin-left: 1%; width: 15%;" type="text" class="form-control" [(ngModel)]="maximumconclusion" value="" name="maxper" (blur)=" blurmaxpercentage($event);">%
 
     </div>
     <div class="form-inline" style="padding-top:1%;">
@@ -93,7 +93,7 @@
   <div style="background-color: #f6f5f1;border:solid 0.1px darkgrey">
 
     <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-top:1%;margin-left:10px" matDialogClose>Close</button>
-    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-top:1%;margin-left:10px">New</button>
+    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-top:1%;margin-left:10px"(click)="Cleardata();">New</button>
 
     <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;margin-top:1%;margin-left:10px" (click)="Restriction_SaveUpdateUS();">Save / Update</button>
 
