--- a/ClientApp/src/app/formula-restriction/rawmaterial-restriction-us/rawmaterial-restriction-us.component.html
+++ b/ClientApp/src/app/formula-restriction/rawmaterial-restriction-us/rawmaterial-restriction-us.component.html
@@ -49,7 +49,7 @@
     </div>
     <div class="form-inline" style="padding-top:1%;">
       <label>Maximum Percentage</label>
-      <input style="margin-left: 1%; width: 15%;" type="text" class="form-control" [(ngModel)]="maximumconclusion" value="" name="maxper">%
+      <input style="margin-left: 1%; width: 15%;" type="text" class="form-control" [(ngModel)]="maximumconclusion" value="" name="maxper" (blur)=" blurmaxper($event);">%
 
     </div>
     <div class="form-inline" style="padding-top:1%;">
