--- a/ClientApp/src/app/raw-material/raw-material.component.html
+++ b/ClientApp/src/app/raw-material/raw-material.component.html
@@ -667,7 +667,7 @@
                                 <td></td>
                                 <td>{{ CAND.FieldOfAppln}}</td>
                                 <td>{{ CAND.Maximum}}</td>
-                                <td>{{ CAND.Percentage}}</td>
+                                <td>{{ CAND.maxpercentage}}</td>
                                 <td>{{ CAND.OtherLimitations}}</td>
                                 <td>{{ CAND.ConditionsOfUse}}</td>
                                 <td>{{ CAND.SourceofInfo}}</td>
@@ -711,7 +711,7 @@
                                 <td></td>
                                 <td>{{ EUvalues.FieldOfAppln}}</td>
                                 <td>{{ EUvalues.Maximum}}</td>
-                                <td>{{ EUvalues.Percentage}}</td>
+                                <td>{{ EUvalues.maxpercentage}}</td>
                                 <td>{{ EUvalues.OtherLimitations}}</td>
                                 <td>{{ EUvalues.ConditionsOfUse}}</td>
                                 <td>{{ EUvalues.SourceofInfo}}</td>
@@ -753,7 +753,7 @@
                                 <td></td>
                                 <td>{{ jpn.FieldOfAppln}}</td>
                                 <td>{{ jpn.Maximum}}</td>
-                                <td>{{ jpn.Percentage}}</td>
+                                <td>{{ jpn.maxpercentage}}</td>
                                 <td>{{ jpn.OtherLimitations}}</td>
                                 <td>{{ jpn.ConditionsOfUse}}</td>
                                 <td>{{ jpn.SourceofInfo}}</td>
@@ -794,7 +794,7 @@
                                 <td></td>
                                 <td>{{ aus.FieldOfAppln}}</td>
                                 <td>{{ aus.Maximum}}</td>
-                                <td>{{ aus.Percentage}}</td>
+                                <td>{{ aus.maxpercentage}}</td>
                                 <td>{{ aus.OtherLimitations}}</td>
                                 <td>{{ aus.ConditionsOfUse}}</td>
                                 <td>{{ aus.SourceofInfo}}</td>
@@ -838,7 +838,7 @@
                                 <td>{{ cload.FieldOfAppln}}</td>
                                 <td>{{ cload.Maximum}}</td>
                                 <td>{{ cload.minpercentage}}</td>
-                                <td>{{ cload.Percentage}}</td>
+                                <td>{{ cload.maxpercentage}}</td>
                                 <td>{{ cload.OtherLimitations}}</td>
                                 <td>{{ cload.ConditionsOfUse}}</td>
                                 <td>{{ cload.SourceofInfo}}</td>
